<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".presentation.detail.UserDetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/margin_10dp">

            <ImageView
                android:id="@+id/iv_user"
                android:layout_width="@dimen/user_image_width_height"
                android:layout_height="@dimen/user_image_width_height"
                android:layout_marginTop="@dimen/margin_10dp"
                android:background="@drawable/ic_user"
                android:contentDescription="@string/app_name"
                tools:targetApi="lollipop" />

            <TextView
                android:id="@+id/txt_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:text="@string/user"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_18sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/txt_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginEnd="@dimen/margin_16dp"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:text="@string/no_email"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_14sp"
                tools:ignore="HardcodedText" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_view_height"
                android:layout_marginLeft="@dimen/margin_16dp"
                android:layout_marginRight="@dimen/margin_16dp"
                android:layout_marginBottom="@dimen/card_view_margin_bottom"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding_5dp">

                    <!--                         Follower-->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/follower"
                            android:textColor="@color/colorBlack"
                            android:textSize="@dimen/text_15sp"
                            tools:ignore="HardcodedText" />

                        <TextView
                            android:id="@+id/txt_follower"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/follower_placeholder"
                            android:textColor="@color/colorBlack"
                            android:textSize="@dimen/text_15sp"
                            android:textStyle="bold"
                            tools:ignore="HardcodedText" />
                    </LinearLayout>

                    <!--                         following-->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/following"
                            android:textColor="@color/colorBlack"
                            android:textSize="@dimen/text_15sp"
                            tools:ignore="HardcodedText" />

                        <TextView
                            android:id="@+id/txt_following"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/following_placeholder"
                            android:textColor="@color/colorBlack"
                            android:textSize="@dimen/text_15sp"
                            android:textStyle="bold"
                            tools:ignore="HardcodedText" />
                    </LinearLayout>

                    <!--                         Follower-->


                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <!--Company-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/company"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_15sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/txt_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/company_placeholder"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_15sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <!--Account Created on-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_50dp"
                android:text="@string/account_created"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_15sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/txt_createdOn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/created_on_placeholder"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_15sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>